Styled and fixed a few bugs
Tried to make the styling a little better. Added some margin to a few elements that were right on the edge, centered a few other elements. Changed the way the background images for the orbs scaled so that the bottom won't be cut off anymore. Also added a cost to the remove craft master mod.

--- a/src/index.css
+++ b/src/index.css
@@ -69,8 +69,8 @@ body {
 }
 
 img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 95%;
+  max-height: 95%;
 }
 
 .itemHeaderContainer {
@@ -159,6 +159,10 @@ button {
 }
 
 .optionMenuContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   color: white;
   font-size: 1.5vw;
   height: 60%;
@@ -167,8 +171,9 @@ button {
 
 .resetButtonDiv {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .resetCurrencyCounter {
@@ -236,6 +241,7 @@ button {
   align-items: center;
   justify-content: center;
   height: 10%;
+  margin-top: 30px;
 }
 
 #tierandtype {
@@ -249,50 +255,51 @@ button {
 
 #transmute {
 	background: url('./assets/Buttons/Transmute.png') no-repeat;
-	background-size: 90%;
+  background-clip: padding-box;
+	background-size: 100% 100%;
 }
 
 #augment {
 	background: url('./assets/Buttons/Augment.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #alteration {
 	background: url('./assets/Buttons/Alteration.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #regal {
 	background: url('./assets/Buttons/Regal.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #exalt {
 	background: url('./assets/Buttons/Exalt.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #chaos {
 	background: url('./assets/Buttons/Chaos.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #alchemy {
 	background: url('./assets/Buttons/Alchemy.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #scour {
 	background: url('./assets/Buttons/Scour.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #annulment {
 	background: url('./assets/Buttons/Annulment.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
 
 #divine {
 	background: url('./assets/Buttons/Divine.png') no-repeat;
-	background-size: 90%;
+	background-size: 100% 100%;
 }
